working on splash page footer styling. updated js carousel sizing to resolve spacing issue

--- a/site/css/_layout.scss
+++ b/site/css/_layout.scss
@@ -27,8 +27,10 @@ section {
 	margin: -10em auto 2em auto;
 }
 
-.rotImg {
-	max-width: 100%;
+.carousel {
+	width: 100%;
+	height: 20em;
+	overflow: hidden;
 }
 
 footer {
@@ -40,17 +42,26 @@ footer {
 		margin-bottom: 1em;
 	}
 
-	.email input[type="text"] {
-		background: none;
-		padding: 10px;
-		border: none;
-		border-bottom: solid 2px #c9c9c9;
-		transition: border 0.3s;
-	}
+	.email-input {
+	
+		h3 {
+			display: inline-block;
+			font-weight: 700;
+		}
 
-	.email input[type="text"]:focus,
-	input[type="text"].focus {
-	  	border-bottom: solid 2px #969696;
+		input[type="text"] {
+			background: none;
+			color: white;
+			margin-left: .5em;
+			padding: 2px;
+			border: none;
+			border-bottom: solid 2px white;
+			transition: border 0.3s;
+		}
+
+		input[type="text"]:focus, {
+		  	border-bottom: solid 2px #969696;
+		}
 	}
 
 	span {
